# dodrio

./: .gitignore  Cargo.toml
config/: ConfigDef.dhall  dodrio.sql
dodrio_base/: Cargo.toml
dodrio_base/src/: lib.rs
server/: .gitignore  Cargo.toml  rustfmt.toml
server/config/: ConfigDef.dhall  DB.dhall  def.dhall  dodrio.sql
server/dodrio_base/: Cargo.toml
server/dodrio_base/src/: lib.rs
server/dodrio_derive/: Cargo.toml
server/dodrio_derive/src/: lib.rs
server/src/: config.rs  error.rs  main.rs  state.rs
server/src/api/: admin.rs  mod.rs  user.rs
server/src/error/: mod.rs
server/src/helper/: admin.rs  admin_user.rs  db.rs  mod.rs  user.rs
server/src/sql/: select_session_user.sql  user_login.sql
server/src/t/: mics.rs  mod.rs  req.rs
src/: main.rs
src/api/: info.rs  user.rs
src/error/: catch_err.rs
src/helper/: admin.rs  db.rs  user.rs
src/sql/: select_session_user.sql  user_create_user.sql  user_login.sql
src/t/: mics.rs  mod.rs
web/: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
web/src/: App.jsx  App.tsx  Main.jsx  Nav.tsx  Provider.jsx  main.js  main.ts
web/src/Lib/: struct.js
web/src/Main/: Main.jsx  Main.tsx  Me.tsx  Nav.tsx  Sample.tsx  Signin.jsx  Signup.jsx  t.js
web/src/Setup/: Main.jsx
web/src/lib/: CallOnce.ts  Mutex.ts  Option.ts  PageResult.ts  Util.ts  page.js  shttp.js  struct.js  t.js  util.js
web/src/other/: page.js  shttp.js  t.js  util.js
web/src/page/: Signup.tsx
web/test/: page.js  shttp.js  struct.js  util.js
web/webpack/: template.html
(+20 files in other folders)
