[package]
name = "server"
version = "0.1.0"
authors = ["荀徒之 <kalxd@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = "1.0.118"
serde_json = "1.0.60"
serde_dhall = "0.9.0"
anyhow = "1.0.35"
deadpool-postgres = "0.5.6"
futures = "0.3.8"
dodrio_base = { path = "./dodrio_base" }
dodrio_derive = { path = "./dodrio_derive" }

[dependencies.tokio-postgres]
version = "0.5.5"
features = ["with-chrono-0_4"]

[dependencies.chrono]
version = "0.4.19"
features = ["default", "serde"]

# [dependencies.sqlx]
# version = "0.4.1"
# features = ["runtime-tokio-rustls", "macros", "chrono"]

[workspace]
members = [
"dodrio_base",
"dodrio_derive"
]
