[package]
name = "dodrio_base"
version = "0.1.0"
authors = ["荀徒之 <kalxd@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies.serde]
# version = "1.0.118"
# features = ["derive"]

[dependencies]
tokio-postgres = "0.5.5"
