[package]
name = "dodrio_derive"
version = "0.1.0"
authors = ["荀徒之 <kalxd@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.53"
quote = "1.0.7"
dodrio_base = { path = "../dodrio_base" }
